--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
   "name": "@ostro/framework",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.0-alpha.2",
   "description": "MVC framework for NodeJS",
-  "engines": {
-    "node": ">= 12.0"
-  },
-  "main": "application.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@ostro/auth": "^0.0.0-alpha.0",
-    "@ostro/cache": "^0.0.0-alpha.0",
-    "@ostro/config": "^0.0.0-alpha.0",
-    "@ostro/console": "^0.0.0-alpha.0",
-    "@ostro/container": "^0.0.0-alpha.0",
-    "@ostro/contracts": "^0.0.0-alpha.0",
-    "@ostro/cookie": "^0.0.0-alpha.0",
-    "@ostro/database": "^0.0.0-alpha.0",
-    "@ostro/encryption": "^0.0.0-alpha.0",
-    "@ostro/filesystem": "^0.0.0-alpha.0",
-    "@ostro/http": "^0.0.0-alpha.0",
-    "@ostro/logger": "^0.0.0-alpha.0",
-    "@ostro/router": "^0.0.0-alpha.0",
-    "@ostro/session": "^0.0.0-alpha.0",
-    "@ostro/server": "^0.0.0-alpha.0",
-    "@ostro/support": "^0.0.0-alpha.0",
-    "@ostro/validation": "^0.0.0-alpha.0",
-    "@ostro/view": "^0.0.0-alpha.0",
-    "@ostro/foundation": "^0.0.0-alpha.0"
+    "@ostro/auth": "^0.0.0-alpha",
+    "@ostro/cache": "^0.0.0-alpha",
+    "@ostro/config": "^0.0.0-alpha",
+    "@ostro/console": "^0.0.0-alpha",
+    "@ostro/container": "^0.0.0-alpha",
+    "@ostro/contracts": "^0.0.0-alpha",
+    "@ostro/cookie": "^0.0.0-alpha",
+    "@ostro/database": "^0.0.0-alpha",
+    "@ostro/encryption": "^0.0.0-alpha",
+    "@ostro/filesystem": "^0.0.0-alpha",
+    "@ostro/http": "^0.0.0-alpha",
+    "@ostro/logger": "^0.0.0-alpha",
+    "@ostro/router": "^0.0.0-alpha",
+    "@ostro/session": "^0.0.0-alpha",
+    "@ostro/server": "^0.0.0-alpha",
+    "@ostro/support": "^0.0.0-alpha",
+    "@ostro/validation": "^0.0.0-alpha",
+    "@ostro/view": "^0.0.0-alpha",
+    "@ostro/foundation": "^0.0.0-alpha"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "engineStrict": true,
   "keywords": [
-    "ostro",
+    "ostrojs",
     "framework",
     "nodejs framework",
     "mvc",
