--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
   },
   "dependencies": {
     "@ostro/auth": "^1.0.0",
-    "@ostro/cache": "^0.0.0-alpha",
-    "@ostro/config": "^0.0.0-alpha",
-    "@ostro/console": "^0.0.0-alpha",
-    "@ostro/container": "^0.0.0-alpha",
-    "@ostro/contracts": "^0.0.0-alpha",
-    "@ostro/cookie": "^0.0.0-alpha",
-    "@ostro/database": "^1.0.0",
-    "@ostro/encryption": "^0.0.0-alpha",
-    "@ostro/filesystem": "^0.0.0-alpha",
-    "@ostro/http": "^0.0.0-alpha",
-    "@ostro/logger": "^0.0.0-alpha",
-    "@ostro/router": "^0.0.0-alpha",
-    "@ostro/session": "^0.0.0-alpha",
-    "@ostro/server": "^0.0.0-alpha",
-    "@ostro/support": "^1.0.0",
-    "@ostro/validation": "^0.0.0-alpha",
-    "@ostro/view": "^0.0.0-alpha",
-    "@ostro/foundation": "^0.0.0-alpha"
+    "@ostro/cache": "^1.0.0",
+    "@ostro/config": "^1.0.2",
+    "@ostro/console": "^1.0.0",
+    "@ostro/container": "^1.0.2",
+    "@ostro/contracts": "^1.0.0",
+    "@ostro/cookie": "^1.0.2",
+    "@ostro/database": "^1.0.2",
+    "@ostro/encryption": "^1.0.0",
+    "@ostro/filesystem": "^1.0.2",
+    "@ostro/http": "^1.0.2",
+    "@ostro/logger": "^1.0.0",
+    "@ostro/router": "^1.0.2",
+    "@ostro/session": "^1.0.2",
+    "@ostro/server": "^1.0.2",
+    "@ostro/support": "^1.0.2",
+    "@ostro/validation": "^1.0.2",
+    "@ostro/view": "^1.0.0",
+    "@ostro/foundation": "^1.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
